<resources>
    <string name="app_name">MyMovieApp</string>

    <string name="facebook_app_id">922088754651956</string>
    <string name="fb_login_protocol_scheme">fb922088754651956</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rate">Top Rate</string>
    <string name="content_discription">content discription</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Log out</string>
    <string name="logout_success">Log out success</string>
    <string name="detail">Detail</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="overview">Overview</string>
    <string name="actor">Actor</string>
    <string name="genres">Genres</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
    <string name="actors_movie">Actor\'s Movie</string>
    <string name="intro">Developed by Phuoc Bao</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="comment">Comment</string>
    <string name="similar_movie">Similar Movies</string>
    <string name="view_more">View more</string>
    <string name="write_comment">Write a comment</string>
    <string name="require_login">You have to login to use this function</string>
    <string name="my_email">phuocbaohuynh@gmail.com</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="gg_login">Sign in with Google</string>
    <string name="empty_comment">Be the first to comment</string>
    <string name="error">Get data error. Please check your connection</string>
</resources>
