<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_150"
    android:background="@drawable/nav_header_wallpaper"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_discription"
        android:src="@drawable/my_pic"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_5"
        android:text="@string/intro"
        android:textColor="@android:color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_5"
        android:text="@string/my_email"
        android:textSize="@dimen/sp_12"
        android:textColor="@android:color/white"
        />
</LinearLayout>