<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:drawableTop="@drawable/ic_login"
                android:drawablePadding="@dimen/dp_10"
                android:text="@string/require_login"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.shaishavgandhi.loginbuttons.FacebookButton
                android:id="@+id/btn_loginFB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/fb_login"
                app:iconCenterAligned="false"
                app:roundedCorner="true" />

            <com.shaishavgandhi.loginbuttons.GoogleButton
                android:id="@+id/btn_loginGG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/gg_login"
                android:textColor="@android:color/black"
                app:iconCenterAligned="false"
                app:roundedCorner="true" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>