<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.baohuynh.mymovieapp.activity.MovieDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_200"
                android:layout_margin="@dimen/dp_10"
                android:contentDescription="@string/content_discription" />

            <TextView
                android:id="@+id/tv_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_toEndOf="@id/img_detail"
                android:layout_toRightOf="@id/img_detail"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_release_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/img_detail"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toEndOf="@id/img_detail"
                android:layout_toRightOf="@id/img_detail"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_rate_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_release_detail"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_7"
                android:layout_toEndOf="@id/img_detail"
                android:layout_toRightOf="@id/img_detail"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_release_detail"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_toEndOf="@id/tv_rate_detail"
                android:layout_toRightOf="@id/tv_rate_detail"
                android:contentDescription="@string/content_discription"
                android:src="@drawable/ic_rating" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_watch_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/shapebutton"
            android:text="@string/watch_trailer"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_5"
                android:background="#4b4848"
                android:gravity="center_horizontal"
                android:text="@string/overview"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_5"
                android:background="#4b4848"
                android:gravity="center_horizontal"
                android:text="@string/actor"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
